build_log_diagnosis.txt

> Task :compileJava FAILED
D:\projects\0826_finalproject\StudyLink-Web\src\main\java\com\StudyLink\www\init\DataLoader.java:102: error: illegal start of expression
                            .isActive(true)
                            ^
D:\projects\0826_finalproject\StudyLink-Web\src\main\java\com\StudyLink\www\init\DataLoader.java:103: error: ';' expected
                            .build());
                                    ^
2 errors

[Incubating] Problems report is available at: file:///D:/projects/0826_finalproject/StudyLink-Web/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  D:\projects\0826_finalproject\StudyLink-Web\src\main\java\com\StudyLink\www\init\DataLoader.java:102: error: illegal start of expression
                              .isActive(true)
                              ^
  D:\projects\0826_finalproject\StudyLink-Web\src\main\java\com\StudyLink\www\init\DataLoader.java:103: error: ';' expected
                              .build());
                                      ^
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 2s
1 actionable task: 1 executed
